pagination on getTransactions
