# wallet/docs/swagger.json
@@ -61,6 +61,18 @@
                 "operationId": "get_transactions",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "default": 1,
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "phone number of user",
                         "name": "phone_number",
@@ -131,6 +143,19 @@
                 },
                 "phone_number": {
                     "type": "string"
+                }
+            }
+        },
+        "inputs.GetTransactionsPagination": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer",
+                    "default": 1
+                },
+                "size": {
+                    "type": "integer",
+                    "default": 10
                 }
             }
         },
